# CS-Advanced-Docking-System

./: .project  CMakeLists.txt  ads.pri
demo/: CMakeLists.txt
examples/: CMakeLists.txt
examples/autohide/: CMakeLists.txt
examples/autohidedragndrop/: CMakeLists.txt
examples/centralwidget/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
examples/configflags/: CMakeLists.txt
examples/deleteonclose/: CMakeLists.txt
examples/dockindock/: CMakeLists.txt
examples/emptydockarea/: CMakeLists.txt
examples/hideshow/: CMakeLists.txt
examples/sidebar/: CMakeLists.txt
examples/simple/: CMakeLists.txt  MainWindow.h
src/: AutoHideDockContainer.cpp  AutoHideDockContainer.h  AutoHideSideBar.h  AutoHideTab.cpp  AutoHideTab.h  CMakeLists.txt  DockAreaTabBar.cpp  DockAreaTabBar.h  DockAreaTitleBar.cpp  DockAreaTitleBar.h  DockAreaTitleBar_p.h  DockAreaWidget.cpp  DockAreaWidget.h  DockContainerWidget.cpp  DockContainerWidget.h  DockFocusController.cpp  DockFocusController.h  DockManager.cpp  DockManager.h  DockOverlay.cpp  DockOverlay.h  DockSplitter.h  DockWidget.h  DockWidgetTab.cpp  DockWidgetTab.h  ElidingLabel.cpp  ElidingLabel.h  FloatingDockContainer.cpp  FloatingDockContainer.h  FloatingDragPreview.cpp  FloatingDragPreview.h  PushButton.cpp  PushButton.h  ResizeHandle.h  ads_globals.h  csadvanceddockingConfig.cmake  src.pro
